# acehash

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
bench/: CMakeLists.txt  bench_aggregate.cpp  bench_function.cpp  bench_intro.cpp  bench_join.cpp  bench_map.cpp  common.hpp
bench/results/: analysis.ipynb
bench/results/csv/: bench_aggregate.csv  bench_baseline.csv  bench_function.csv  bench_function_1.csv  bench_intro.csv  bench_join.csv  bench_map.csv
include/acehash/: acehash.hpp
test/: CMakeLists.txt  test.cpp
